[gd_scene load_steps=2 format=3 uid="uid://c7rm5at1hk0aj"]

[ext_resource type="Script" uid="uid://bo2pc80oqsjqq" path="res://src/ui/screens/game_over_screen.gd" id="1_gd380"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gd380")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="TitleContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GameOverTitle" type="Label" parent="VBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Game Over"
horizontal_alignment = 1

[node name="PersonalBestTitle" type="Label" parent="VBoxContainer/TitleContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderSmall"
theme_override_colors/font_color = Color(0.67684, 0.825027, 0.643692, 1)
text = "High Score!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/TitleContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CurrentRunHeader" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
text = "This Run:"
horizontal_alignment = 1

[node name="CurrentRunStats" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="FinalFloorLabel" type="Label" parent="VBoxContainer/StatsContainer/CurrentRunStats"]
unique_name_in_owner = true
layout_mode = 2
text = "Floor Reached: 0"
horizontal_alignment = 1

[node name="FinalGoldLabel" type="Label" parent="VBoxContainer/StatsContainer/CurrentRunStats"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold Earned: 0"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/StatsContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BestStats" type="VBoxContainer" parent="VBoxContainer/StatsContainer"]
layout_mode = 2

[node name="BestFloorLabel" type="Label" parent="VBoxContainer/StatsContainer/BestStats"]
unique_name_in_owner = true
layout_mode = 2
text = "Best Floor: 0"
horizontal_alignment = 1

[node name="BestGoldLabel" type="Label" parent="VBoxContainer/StatsContainer/BestStats"]
unique_name_in_owner = true
layout_mode = 2
text = "Best Gold: 0"
horizontal_alignment = 1

[node name="TotalRunsLabel" type="Label" parent="VBoxContainer/StatsContainer/BestStats"]
unique_name_in_owner = true
layout_mode = 2
text = "Total Runs: 0"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartBtn" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Play Again"

[node name="Spacer" type="Control" parent="VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(20, 50)
layout_mode = 2

[node name="TitleBtn" type="Button" parent="VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
